ROS_Workspace/src/UAVMain/log/build_2023-07-17_12-37-19/UAVMain/stderr.log
  File "/home/teamvision/Desktop/ROS_Workspace/Honours_a1797823_a1764124/ROS_Workspace/src/UAVMain/install/UAVMain/lib/python3.8/site-packages/UAVMain/UAVMain.py", line 20
    self.publisher = self.create_publisher(Float32MultiArray[],LED1_name,10)
                                                             ^
SyntaxError: invalid syntax

